--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -138,11 +138,11 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
 }
 
-#header .logo img {
+/* #header .logo img {
   padding: 0;
   margin: 0;
   max-height: 40px;
-}
+} */
 
 .scrolled-offset {
   margin-top: 70px;
@@ -378,7 +378,8 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 60vh;
-  background: url("../img/hero-bg.jpg") center center;
+  /* background: url("../img/hero-bg.jpg") center center; */
+  background: url("../img/tanjHomeImg_1.jpg") center center;
   background-size: cover;
   position: relative;
   z-index: 1;
